@@ -690,6 +690,7 @@ main (int argc, char *argv[])
 	}
 
 	gtk_window_set_default_icon_name ("gnome-monitor");
+	g_set_application_name(_("System Monitor"));
 		    
 	gconf_init (argc, argv, NULL);
 			    
