@@ -1,3 +1,11 @@
+2006-06-29  Benoît Dejean  <benoit@placenet.org>
+
+	* src/callbacks.c: (cb_about):
+	* src/procman.c: (main):
+
+	Set application name.
+	Updated about dialog (http://live.gnome.org/GnomeGoals/AboutDialog).
+
 2006-06-28  Benoît Dejean  <benoit@placenet.org>
 
 	* src/proctable.c: (proctable_new):
